--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.4.1",
+
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
-    "redux-thunk": "^2.4.1"
-    "crypto-js": "^4.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux-thunk": "^2.4.1",
+    "crypto-js": "^4.1.1"
+
   },
   "scripts": {
     "start": "react-scripts start",
